# lyrisync

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/lyrisync/: __init__.py  geometry.py  gestures.py  loop.py  lyrics_cli.py  lyrics_provider.py  macspaces.py  monitor_cli.py  player_monitor.py  romanize.py  speech.py  sync.py  view_model.py  window.py
tests/: test_geometry.py  test_gestures.py  test_loop.py  test_lyrics_provider.py  test_macspaces.py  test_player_monitor.py  test_romanize.py  test_speech.py  test_sync.py  test_view_model.py
