[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lyrisync"
version = "0.1.0"
description = "Synced lyrics for the Spotify desktop app on macOS"
requires-python = ">=3.12"
# PySide6 is only imported by the window; monitor, provider, and sync
# stay stdlib-only.
dependencies = [
    "PySide6>=6.8",
    # Native NSWindow collection behaviour (show-on-all-desktops); Qt has
    # no cross-platform API for macOS Spaces.
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    # Revised Romanization for the Korean pronunciation line.
    "korean-romanizer>=0.25",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
lyrisync = "lyrisync.window:main"
lyrisync-monitor = "lyrisync.monitor_cli:main"
lyrisync-lyrics = "lyrisync.lyrics_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lyrisync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
